--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
-        <activity android:name="HOSPITAL.Showdet"></activity>
+        <activity android:name="USER.content"></activity>
+        <activity android:name="HOSPITAL.Showdet" />
         <activity android:name="HOSPITAL.DATABEDS" />
         <activity android:name="HOSPITAL.HOSPITALDETAILS" />
         <activity android:name="HOSPITAL.LOG" />
