--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.covidcare">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
-        <activity android:name="USER.content"></activity>
+        <activity android:name="USER.LoginActivity" />
+        <activity android:name="USER.NavigationActivity" />
+        <activity android:name="USER.Showprofile" />
+        <activity android:name="USER.CreateProfile" />
+        <activity android:name="USER.content" />
         <activity android:name="HOSPITAL.FinalView" />
         <activity android:name="HOSPITAL.Modify" />
         <activity android:name="HOSPITAL.Finaldata" />
@@ -22,7 +28,6 @@
         <activity android:name="USER.details" />
         <activity android:name="USER.register" />
         <activity android:name="USER.R_AND_L" />
-        <activity android:name=".MainActivity2" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
