--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.airbnb.android:lottie:3.7.0'
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
