--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.airbnb.android:lottie:3.7.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
