--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
-        <activity android:name="USER.BookingHistory"></activity>
+        <activity android:name="USER.confirmation2"></activity>
+        <activity android:name="USER.BookingHistory" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
