--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions{
+        exclude 'com/itextpdf/io/font/cmap_info.txt'
+        exclude 'com/itextpdf/io/font/cmap/*'
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -33,14 +37,14 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'com.chaos.view:pinview:1.4.3'
+    implementation 'com.chaos.view:pinview:1.4.4'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
-    implementation 'com.google.android.gms:play-services-auth:18.0.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.google.firebase:firebase-database:20.0.0'
     implementation 'com.google.firebase:firebase-database'
-    implementation 'com.google.firebase:firebase-firestore:23.0.0'
+    implementation 'com.google.firebase:firebase-firestore:23.0.1'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
@@ -50,7 +54,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
     implementation files('libs/additionnal (1).jar')
     implementation files('libs/mail.jar')
-    testImplementation 'junit:junit:4.+'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.vikktorn.picker:picker:1.0.0'
@@ -64,6 +69,8 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.airbnb.android:lottie:3.7.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.itextpdf:itext7-core:7.1.3'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
