--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
-        <activity android:name="USER.UpdateProfile"></activity>
+        <activity android:name="HOSPITAL.HospitalNavigationActivity"></activity>
+        <activity android:name="HOSPITAL.HospitalShowProfile" />
+        <activity android:name="HOSPITAL.HospitalProfile" />
+        <activity android:name="HOSPITAL.HospitalVerification" />
+        <activity android:name="HOSPITAL.HospitalRegister" />
+        <activity android:name="HOSPITAL.HospitalLogin" />
+        <activity android:name="USER.UpdateProfile" />
         <activity android:name="USER.Showuser" />
         <activity android:name="USER.Profile" />
         <activity android:name="USER.Guidelines" />
@@ -33,14 +39,9 @@
         <activity android:name="USER.LoginActivity" />
         <activity android:name="USER.NavigationActivity" />
         <activity android:name="USER.content" />
-        <activity android:name="HOSPITAL.FinalView" />
-        <activity android:name="HOSPITAL.Modify" />
-        <activity android:name="HOSPITAL.Finaldata" />
         <activity android:name="HOSPITAL.Showdet" />
         <activity android:name="HOSPITAL.DATABEDS" />
         <activity android:name="HOSPITAL.HOSPITALDETAILS" />
-        <activity android:name="HOSPITAL.LOG" />
-        <activity android:name="HOSPITAL.REG" />
         <activity android:name="HOSPITAL.REGandLOG" />
         <activity android:name="USER.details" />
         <activity android:name="USER.R_AND_L" />
