--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.itextpdf:itext7-core:7.1.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
