--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
-        <activity android:name="HOSPITAL.HospitalNavigationActivity"></activity>
+        <activity android:name="HOSPITAL.Hospitalupdateprofile"></activity>
+        <activity android:name="HOSPITAL.HospitalNavigationActivity" />
         <activity android:name="HOSPITAL.HospitalShowProfile" />
         <activity android:name="HOSPITAL.HospitalProfile" />
         <activity android:name="HOSPITAL.HospitalVerification" />
