--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
-        <activity android:name="USER.dummy"></activity>
+        <activity android:name="USER.UserTerms"></activity>
+        <activity android:name="HOSPITAL.TermsAndCondition" />
         <activity android:name="HOSPITAL.Hospitalupdateprofile" />
         <activity android:name="HOSPITAL.HospitalNavigationActivity" />
+        <activity android:name="HOSPITAL.HospitalShowProfile" />
+        <activity android:name="HOSPITAL.HospitalProfile" />
         <activity android:name="HOSPITAL.HospitalVerification" />
         <activity android:name="HOSPITAL.HospitalRegister" />
         <activity android:name="HOSPITAL.HospitalLogin" />
